# hpa_menu_package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test1.json
FlikMenuParser/: __init__.py  flow.py  get_url.py  parsing.py  save.py
hpa_menu/: parse.py  parsing.py  save.py  testdata
hpa_menu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hpa_menu_scraper.egg-info/: PKG-INFO  SOURCES.txt
src/hpa_menu/: parse.py
src/hpa_menu_scraper.egg-info/: PKG-INFO  SOURCES.txt
