[metadata]
name = hpa_menu_scraper
version = 0.1.4
author = Ezekiel Sarosi
author_email = zeke.sarosi@gmail.com
description = For parsing Flik/Nutrislice Menu Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zekesarosi/hpa_menu_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True